<resources>
    <string name="app_name">Picnic</string>
    <string name="action_settings">Settings</string>


    <string name="server">Server Configuration</string>
    <string name="host">HOST</string>
    <string name="port">PORT</string>
    <string name="suname">SERVER USERNAME</string>
    <string name="spaswd">SERVER PASSWORD</string>
    <string name="cmpcode">COMPANY CODE</string>
    <string name="regcode">REGISTER CODE</string>


    <string name="clhelp">CALL HELP</string>
    <string name="hlpDes">Help is on the way.\n Please wait for assistance to arrive. </string>
    <string name="cmlcrt">RESTART CART</string>
    <string name="crtdes">Clear your Cart?</string>

    <string name="crtempy"> CART EMPTY</string>
    <string name="addtm">Please add the items to cart.</string>

    <string name="invalidtttt">Invalid Buzzer</string>
    <string name="tttt">Placed an Invalid Buzzer. Please Chck with Our Staff.</string>

    <string name="cfrcrt">CONFIRM ORDER</string>
    <string name="tap">Tap and Hold your buzzer on the reader below  \n to confirm your order</string>
    <string name="ords">ORDER \n  SUCCESSFULLY</string>
    <string name="plzup">PLEASE WAIT \n FOR YOUR\n BUZZER \n TO COLLECT \n YOUR ITEM</string>
<string name="fcd">Would you like to Submit your Order.\n Please Confirm.</string>

    <string name="fil">Failed ORDER</string>
    <string name="trgy">Please try to order again.</string>

    <string name="cread"> Fail to connect, please check your credentials and try again.</string>
    <string name="netw">No network available please try again later.</string>
    <string name="default_currency"> S$</string>
    <string name="chose"> Select one of the following options.</string>
    <string name="hint_re">Choose remarks</string>
    <string name="remw">Write  remarks </string>
    <string name="nam">Name</string>
    <string name="eml">Email</string>
    <string name="ad">Address</string>
    <string name="mob">Mobile</string>
    <string name="select">Please select all the options before placing  an order.</string>
    <string name="rate">Please rate the following on a scale of 1 – 10(1 being poor and 10 being excellent).</string>
    <string name="fq">Food Quality</string>
    <string name="es">Efficiency of service</string>
    <string name="tst">Taste</string>
    <string name="frnd">Friendliness</string>
    <string name="adf">Additional comments and feedback</string>
    <string name="stf">Our staff is preparing bill.\nIn mean time, please share your feedback.</string>
    <string name="mno">Menu offering</string>
    <string name="mk">Menu knowledge</string>
    <string name="sr">services</string>
    <string name="noOrd">There is no items in your Order. please add the items.</string>
    <string name="rem">REMARKS </string>
    <string name="encdq">&lt;?xml version=\&quot;1.0\&quot; encoding=\&quot;UTF-8\&quot;?&gt;&lt;plist version=\&quot;1.0\&quot;&gt;&lt;array&gt;</string>
    <string name="encdtaiq">&lt;/array&gt;&lt;/plist&gt;</string>
    <string name="failOrder">Fail to Order. please  try again .</string>
    <string name="sOrder"> Thank You! \n Your Order has been  sent to our kitchen \n for preparation</string>
    <string name="myOrder"> Loading Orders...</string>
    <string name="remrk">Remark&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160; </string>

    <string name="recptr">TOKEN NO&#58;_ BUZZER NO&#58;_</string>


    <string name="cnfmbtn">CONFIRM ORDER</string>
    <string name="added">ADDED!</string>
    <string name="additm">ADD ITEM</string>
    <string name="slect">SELECT </string>

<string name="remve">REMOVE</string>
    <string name="bck">BACK</string>
    <string name="cnlt">CANCEL</string>
    <string name="mre">MORE</string>

<string name="dcsp">Select \nyour item</string>


    <string name="prom">There is currently no promotion available. Please visit us again for future promotion.</string>
</resources>

